Updated to pass linting rules.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,9 @@
         "strict": true,
         "target": "ES6"
     },
+    "exclude": [
+        "./dist/**/*"
+    ],
     "include": [
         ".storybook/**/*",
         "./**/*"
