--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,9 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          passphrase: ${{ secrets.KEY_PASSPHRASE }}
           key: ${{ secrets.KEY }}
+          passphrase: ${{ secrets.KEY_PASSPHRASE }}
           port: ${{ secrets.PORT }}
+          source: '.'
           target: ${{ secrets.DEPLOYMENT_LOCATION }}
+          username: ${{ secrets.USERNAME }}
