--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,6 @@ jobs:
           key: ${{ secrets.KEY }}
           passphrase: ${{ secrets.KEY_PASSPHRASE }}
           port: ${{ secrets.PORT }}
-          source: '.'
+          source: './dist/'
           target: ${{ secrets.DEPLOYMENT_LOCATION }}
           username: ${{ secrets.USERNAME }}
