--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
           key: ${{ secrets.KEY }}
           passphrase: ${{ secrets.KEY_PASSPHRASE }}
           port: ${{ secrets.PORT }}
-          source: './dist/'
+          source: './dist/*'
+          strip_components: 1
           target: ${{ secrets.DEPLOYMENT_LOCATION }}
           username: ${{ secrets.USERNAME }}
