--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,9 @@ jobs:
           key: ${{ secrets.KEY }}
           passphrase: ${{ secrets.KEY_PASSPHRASE }}
           port: ${{ secrets.PORT }}
-          source: './dist/*'
+          rm: true
+          source: "./dist/*"
           strip_components: 1
           target: ${{ secrets.DEPLOYMENT_LOCATION }}
+          timeout: "60s"
           username: ${{ secrets.USERNAME }}
