--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,15 @@
-name: CI/CD - Main
+name: CI/CD - Reflecta UI
 
 on:
   push:
     branches: [main]
+    paths: [packages/reflecta-ui/**]
   pull_request:
     branches: [main]
+    paths: [packages/reflecta-ui/**]
   workflow_dispatch:
     branches: [main]
+    paths: [packages/reflecta-ui/**]
 
 jobs:
   build:
@@ -42,7 +45,7 @@ jobs:
           passphrase: ${{ secrets.KEY_PASSPHRASE }}
           port: ${{ secrets.PORT }}
           rm: true
-          source: "./dist/*"
+          source: "./packages/reflecta-ui/dist/*"
           strip_components: 1
           target: ${{ secrets.DEPLOYMENT_LOCATION }}
           timeout: "120s"
