Updated CI/CD pipeline.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,3 +50,4 @@ jobs:
           target: ${{ secrets.DEPLOYMENT_LOCATION }}
           timeout: "120s"
           username: ${{ secrets.USERNAME }}
+          overwrite: true
