--- a/.github/workflows/reflecta-ui-develop.yml
+++ b/.github/workflows/reflecta-ui-develop.yml
@@ -31,8 +31,8 @@ jobs:
 
       # Lint
       - name: Lint
-        run: npm run lint --workspaces reflecta-ui
+        run: npm run lint -w reflecta-ui
 
       # Build Reflecta UI
       - name: Build
-        run: npm run build:develop --workspaces reflecta-ui
+        run: npm run build:develop -w reflecta-ui
