--- a/packages/reflecta-components/tsconfig.json
+++ b/packages/reflecta-components/tsconfig.json
@@ -1,4 +1,9 @@
 {
+    "compilerOptions": {
+        "declaration": true,
+        "emitDeclarationOnly": true,
+        "rootDir": "./src"
+    },
     "exclude": [
         "./dist/**/*"
     ],
