--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,11 +4,27 @@
 	"name": "Debian",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "mcr.microsoft.com/devcontainers/base:bullseye",
-	"postCreateCommand": "bash -i ./scripts/postCreateCommand.sh"
+	"postCreateCommand": "bash -i ./scripts/postCreateCommand.sh",
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"dbaeumer.vscode-eslint",
+				"streetsidesoftware.code-spell-checker",
+				"mrmlnc.vscode-csscomb",
+				"eamodio.gitlens",
+				"Asuka.insertnumbers",
+				"Tyriar.lorem-ipsum",
+				"deerawan.vscode-faker",
+				"zengxingxin.sort-js-object-keys"
+			]
+		}
+	}
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	// "forwardPorts": [
+	// 	22
+	// ]
 	// Configure tool-specific properties.
 	// "customizations": {},
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
