--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "concurrently": "^8.0.1",
     "current-git-branch": "^1.1.0",
     "eslint": "^8.39.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -32,12 +33,14 @@
     "url": "git+https://github.com/srm985/reflecta-mono.git"
   },
   "scripts": {
+    "develop": "concurrently --raw \"npm start -w reflecta-components\" \"npm start -w reflecta-ui\"",
     "lint": "eslint ./*.js ./scripts/*.js && npm run lint --workspaces",
     "lint:fix": "eslint ./*.js ./scripts/*.js --fix && npm run lint:fix --workspaces",
-    "postinstall": "cd packages/reflecta-ui/ && npm install --ignore-scripts",
+    "postinstall": "concurrently --raw --group \"cd packages/reflecta-ui/ && npm install --ignore-scripts\" \"cd packages/reflecta-components && npm install --ignore-scripts\"",
     "pre-commit": "cross-env FORCE_COLOR=true lint-staged && npm run pre-commit --workspaces",
     "pre-push": "node ./scripts/branchCheck.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "npm run develop"
   },
   "version": "1.0.0",
   "workspaces": [
