Added support to generate component declarations.

--- a/packages/reflecta-components/tsconfig.json
+++ b/packages/reflecta-components/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "rootDir": "./src"
+        "jsx": "react-jsx",
+        "outDir": "./declarations"
     },
     "exclude": [
         "./dist/**/*"
