--- a/packages/reflecta-ui/tsconfig.json
+++ b/packages/reflecta-ui/tsconfig.json
@@ -1,4 +1,8 @@
 {
+    "compilerOptions": {
+        "jsx": "react-jsx",
+        "outDir": "./dist"
+    },
     "exclude": [
         "./dist/**/*"
     ],
@@ -6,6 +10,7 @@
     "include": [
         "src/**/*",
         "src/*",
-        "./*.js"
+        "./*.js",
+        "./*.ts"
     ]
 }
