--- a/packages/reflecta-components/.eslintrc
+++ b/packages/reflecta-components/.eslintrc
@@ -77,6 +77,9 @@
         "react/no-unescaped-entities": [
             0
         ],
+        "react/prop-types": [
+            0
+        ],
         "react/react-in-jsx-scope": "off"
     }
 }
