--- a/packages/reflecta-components/package.json
+++ b/packages/reflecta-components/package.json
@@ -59,12 +59,11 @@
       "eslint --fix"
     ]
   },
-  "main": "index.(ts|tsx)",
   "name": "reflecta-components",
   "scripts": {
     "build:production": "npm run config:production webpack",
-    "config:local": "cross-env NODE_ENV=development BASE_URL=http://localhost:3100 LOCAL_STORAGE_TOKEN=884zGdCWYBEFQdeM5X7e",
-    "config:production": "cross-env NODE_ENV=production BASE_URL=https://reflecta.app.com LOCAL_STORAGE_TOKEN=MWwbrdnKMGqkpe6QD9XL",
+    "config:local": "cross-env NODE_ENV=development",
+    "config:production": "cross-env NODE_ENV=production",
     "develop": "npm run config:local concurrently --raw \"npm:lint --silent\" \"webpack-dev-server --open --config ./webpack.config.js --mode=development --port 3003\" \"npm:watch --silent\"",
     "lint": "concurrently --raw \"npm:lint:js --silent\" \"npm:lint:scss --silent\"",
     "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*.scss  --color --allow-empty-input --fix\"",
@@ -79,5 +78,7 @@
     "watch:prettier": "onchange --delay 500 \"src/**/*.scss\" -- npm run lint:scss --silent",
     "watch:scss": "onchange --delay 500 \"src/**/*.scss\" -- npm run lint:scss --silent"
   },
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "version": "1.0.0"
 }
