--- a/packages/reflecta-ui/package.json
+++ b/packages/reflecta-ui/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.3",
     "current-git-branch": "^1.1.0",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.37.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -63,10 +64,9 @@
   "main": "index.(ts|tsx)",
   "name": "reflecta-ui",
   "scripts": {
-    "build:production": "npm run config:production webpack",
-    "config:local": "cross-env NODE_ENV=development BASE_URL=http://localhost:3100 LOCAL_STORAGE_TOKEN=884zGdCWYBEFQdeM5X7e",
-    "config:production": "cross-env NODE_ENV=production BASE_URL=https://reflecta.app.com LOCAL_STORAGE_TOKEN=MWwbrdnKMGqkpe6QD9XL",
-    "develop": "npm run config:local concurrently --raw \"npm:lint --silent\" \"webpack-dev-server --open --config ./webpack.config.js --mode=development --port 3000\" \"npm:watch --silent\"",
+    "build": "npm run webpack",
+    "config:local": "cross-env FEDERATED_COMPONENTS_URL=reflecta_components@http://localhost:3003/remoteEntry.js NODE_ENV=development WEBPACK_SERVER_PORT_UI=3000",
+    "develop": "npm run config:local concurrently --raw \"npm:lint --silent\" \"webpack-dev-server --open --config ./webpack.config.js --mode=development\" \"npm:watch --silent\"",
     "lint": "concurrently --raw \"npm:lint:js --silent\" \"npm:lint:scss --silent\"",
     "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*.scss  --color --allow-empty-input --fix\"",
     "lint:js": "eslint . --ext .ts,.tsx,.js",
