--- a/packages/reflecta-components/package.json
+++ b/packages/reflecta-components/package.json
@@ -61,9 +61,8 @@
   },
   "name": "reflecta-components",
   "scripts": {
-    "build:production": "npm run config:production webpack",
-    "config:local": "cross-env NODE_ENV=development",
-    "config:production": "cross-env NODE_ENV=production",
+    "build": "npm run webpack",
+    "config:local": "cross-env NODE_ENV=development WEBPACK_SERVER_PORT_COMPONENTS=3003",
     "develop": "npm run config:local concurrently --raw \"npm:lint --silent\" \"webpack-dev-server --open --config ./webpack.config.js --mode=development --port 3003\" \"npm:watch --silent\"",
     "lint": "concurrently --raw \"npm:lint:js --silent\" \"npm:lint:scss --silent\"",
     "lint:fix": "concurrently --raw \"eslint . --ext .ts,.tsx,.js --fix\" \"stylelint src/**/*.scss  --color --allow-empty-input --fix\"",
