Testing updated CI/CD pipeline.

--- a/.github/workflows/reflecta-ui-deploy.yml
+++ b/.github/workflows/reflecta-ui-deploy.yml
@@ -47,7 +47,7 @@ jobs:
           rm: true
           source: "./packages/reflecta-ui/dist/*"
           strip_components: 3
-          target: ${{ envs.DEPLOYMENT_LOCATION_COMPONENTS }}
+          target: ${{ env.DEPLOYMENT_LOCATION_COMPONENTS }}
           timeout: "120s"
           username: ${{ secrets.USERNAME }}
           overwrite: true
