--- a/.github/workflows/refletca-components-deploy.yml
+++ b/.github/workflows/refletca-components-deploy.yml
@@ -12,6 +12,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      NODE_ENV: ${{ env.NODE_ENV}}
+      WEBPACK_SERVER_PORT_COMPONENTS: ${{ env.WEBPACK_SERVER_PORT_COMPONENTS}}
+
     steps:
       - uses: actions/checkout@v3
 
