--- a/.github/workflows/refletca-components-deploy.yml
+++ b/.github/workflows/refletca-components-deploy.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build
         run: npm run build -w reflecta-components
         env:
-          NODE_ENV: ${{ env.NODE_ENV}}
+          NODE_ENV: ${{ vars.NODE_ENV}}
           WEBPACK_SERVER_PORT_COMPONENTS: ${{ env.WEBPACK_SERVER_PORT_COMPONENTS}}
 
       # Deploy Reflecta Components
@@ -46,7 +46,7 @@ jobs:
           rm: true
           source: "./packages/reflecta-components/dist/*"
           strip_components: 3
-          target: ${{ env.DEPLOYMENT_LOCATION_COMPONENTS }}
+          target: ${{ vars.DEPLOYMENT_LOCATION_COMPONENTS }}
           timeout: "120s"
           username: ${{ secrets.USERNAME }}
           overwrite: true
