--- a/.github/workflows/reflecta-ui-deploy.yml
+++ b/.github/workflows/reflecta-ui-deploy.yml
@@ -34,11 +34,14 @@ jobs:
 
       # Build Reflecta UI
       - name: Build
-        run: npm run build -w reflecta-ui
-        env:
+      env:
           FEDERATED_COMPONENTS_URL: ${{ vars.FEDERATED_COMPONENTS_URL }}
           NODE_ENV: ${{ vars.NODE_ENV}}
           WEBPACK_SERVER_PORT_COMPONENTS: ${{ vars.WEBPACK_SERVER_PORT_COMPONENTS}}
+        run: |
+          ECHO ${{ env.FEDERATED_COMPONENTS_URL }}
+          ECHO ${{ vars.FEDERATED_COMPONENTS_URL }}
+          npm run build -w reflecta-ui
 
       # Deploy Reflecta UI
       - name: Deploy
