--- a/.github/workflows/refletca-components-deploy.yml
+++ b/.github/workflows/refletca-components-deploy.yml
@@ -9,7 +9,8 @@ on:
     paths: [packages/reflecta-components/**]
 
 jobs:
-  build:
+  lint-scss:
+    name: Lint SCSS
     runs-on: ubuntu-latest
     environment: production
 
@@ -23,11 +24,50 @@ jobs:
 
       # Install Node Modules
       - name: Install
-        run: npm install
+        run: npm ci
 
-      # Lint
+      # Lint SCSS
       - name: Lint
-        run: npm run lint -w reflecta-components
+        run: npm run lint:scss -w reflecta-components
+
+  lint-js:
+    name: Lint JavaScript/TypeScript
+    runs-on: ubuntu-latest
+    environment: production
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Use NodeJS 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+
+      # Install Node Modules
+      - name: Install
+        run: npm ci
+
+      # Lint JavaScript/TypeScript
+      - name: Lint
+        run: npm run lint:js -w reflecta-components
+
+  build-components:
+    name: Build
+    needs: [lint-scss, lint-js]
+    runs-on: ubuntu-latest
+    environment: production
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Use NodeJS 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
+
+      # Install Node Modules
+      - name: Install
+        run: npm ci
 
       # Build Reflecta Components
       - name: Build
@@ -36,18 +76,26 @@ jobs:
           NODE_ENV: ${{ vars.NODE_ENV}}
           WEBPACK_SERVER_PORT_COMPONENTS: ${{ env.WEBPACK_SERVER_PORT_COMPONENTS}}
 
-      # Deploy Reflecta Components
-      - name: Deploy
-        uses: appleboy/scp-action@master
+      # Upload Artifacts
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
         with:
-          host: ${{ secrets.HOST }}
-          key: ${{ secrets.KEY }}
-          passphrase: ${{ secrets.KEY_PASSPHRASE }}
-          port: ${{ secrets.PORT }}
-          rm: true
-          source: "./packages/reflecta-components/dist/*"
-          strip_components: 3
-          target: ${{ vars.DEPLOYMENT_LOCATION_COMPONENTS }}
-          timeout: "120s"
-          username: ${{ secrets.USERNAME }}
-          overwrite: true
+          name: bundle
+          path: ./packages/reflecta-components/dist/
+
+
+  build:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+    environment: production
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/checkout@v3
+
+      - uses: actions/download-artifact@v3
+
+      - name: Display structure of downloaded files
+        run: ls -R
