--- a/.github/workflows/refletca-components-deploy.yml
+++ b/.github/workflows/refletca-components-deploy.yml
@@ -12,7 +12,6 @@ jobs:
   lint-scss:
     name: Lint SCSS
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
       - uses: actions/checkout@v3
@@ -33,7 +32,6 @@ jobs:
   lint-js:
     name: Lint JavaScript/TypeScript
     runs-on: ubuntu-latest
-    environment: production
 
     steps:
       - uses: actions/checkout@v3
@@ -83,7 +81,6 @@ jobs:
           name: bundle
           path: ./packages/reflecta-components/dist/
 
-
   deploy:
     name: Deploy
     needs: build
@@ -93,9 +90,26 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/checkout@v3
-
-      - uses: actions/download-artifact@v3
+      - name: Download Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          path: ./bundle
 
       - name: Display structure of downloaded files
         run: ls -R
+
+      # Deploy Reflecta Components
+      - name: Deploy
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          key: ${{ secrets.KEY }}
+          passphrase: ${{ secrets.KEY_PASSPHRASE }}
+          port: ${{ secrets.PORT }}
+          rm: true
+          source: "./packages/reflecta-components/dist/*"
+          strip_components: 3
+          target: ${{ vars.DEPLOYMENT_LOCATION_COMPONENTS }}
+          timeout: "120s"
+          username: ${{ secrets.USERNAME }}
+          overwrite: true
