--- a/.github/workflows/refletca-components-deploy.yml
+++ b/.github/workflows/refletca-components-deploy.yml
@@ -92,8 +92,6 @@ jobs:
 
       - name: Download Artifacts
         uses: actions/download-artifact@v3
-        with:
-          path: ./bundle
 
       - name: Display structure of downloaded files
         run: ls -R
@@ -107,8 +105,8 @@ jobs:
           passphrase: ${{ secrets.KEY_PASSPHRASE }}
           port: ${{ secrets.PORT }}
           rm: true
-          source: "./packages/reflecta-components/dist/*"
-          strip_components: 3
+          source: "./bundle/*"
+          strip_components: 1
           target: ${{ vars.DEPLOYMENT_LOCATION_COMPONENTS }}
           timeout: "120s"
           username: ${{ secrets.USERNAME }}
