--- a/.github/workflows/reflecta-ui-deploy.yml
+++ b/.github/workflows/reflecta-ui-deploy.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: ./packages/reflecta-components/dist
+          name: dist
           path: ./packages/reflecta-components/dist/
 
   build:
@@ -101,6 +101,9 @@ jobs:
       # Download Artifacts
       - name: Download Artifacts
         uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: ./packages/reflecta-components/
 
       - name: Display structure of downloaded files
         run: ls -R
