--- a/.github/workflows/reflecta-ui-deploy.yml
+++ b/.github/workflows/reflecta-ui-deploy.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist
+          name: components-bundle
           path: ./packages/reflecta-components/dist/
 
   build:
@@ -98,8 +98,8 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: dist
-          path: ./packages/reflecta-components/
+          name: components-bundle
+          path: ./packages/reflecta-components/dist/
 
       - name: Display structure of downloaded files
         run: ls -R
