--- a/.github/workflows/reflecta-ui-deploy.yml
+++ b/.github/workflows/reflecta-ui-deploy.yml
@@ -94,19 +94,16 @@ jobs:
         with:
           node-version: '18.x'
 
+      # Install Node Modules
+      - name: Install
+        run: npm ci
+
       # Download Artifacts
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
           name: component-declarations
           path: ./packages/reflecta-components/declarations/
-
-      - name: Display structure of downloaded files
-        run: ls -R
-
-      # Install Node Modules
-      - name: Install
-        run: npm ci
 
       # Build Reflecta UI
       - name: Build
@@ -136,9 +133,6 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
 
-      - name: Display structure of downloaded files
-        run: ls -R
-
       # Deploy Reflecta ui
       - name: Deploy
         uses: appleboy/scp-action@master
@@ -149,7 +143,7 @@ jobs:
           port: ${{ secrets.PORT }}
           rm: true
           source: "./bundle/*"
-          strip_ui: 1
+          strip_components: 1
           target: ${{ vars.DEPLOYMENT_LOCATION_UI }}
           timeout: "120s"
           username: ${{ secrets.USERNAME }}
