--- a/packages/reflecta-components/.eslintrc
+++ b/packages/reflecta-components/.eslintrc
@@ -17,7 +17,8 @@
             "error",
             {
                 "devDependencies": [
-                    "./*.js"
+                    "./*.js",
+                    "./.storybook/*"
                 ]
             }
         ],
