--- a/packages/reflecta-components/package.json
+++ b/packages/reflecta-components/package.json
@@ -6,9 +6,16 @@
   },
   "description": "Reflecta UI component library managed via storybook and exposed via Webpack module federation.",
   "devDependencies": {
-    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.5",
+    "@storybook/addon-essentials": "^7.0.8",
+    "@storybook/addon-interactions": "^7.0.8",
+    "@storybook/addon-links": "^7.0.8",
+    "@storybook/blocks": "^7.0.8",
+    "@storybook/react": "^7.0.8",
+    "@storybook/react-webpack5": "^7.0.8",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
@@ -31,6 +38,7 @@
     "prettier": "^2.8.7",
     "sass": "^1.60.0",
     "sass-loader": "^13.2.2",
+    "storybook": "^7.0.8",
     "style-loader": "^3.3.2",
     "stylelint": "^15.4.0",
     "stylelint-config-rational-order": "^0.1.2",
@@ -59,9 +67,11 @@
       "eslint --fix"
     ]
   },
+  "main": "dist/index.js",
   "name": "reflecta-components",
   "scripts": {
     "build": "webpack",
+    "build:storybook": "storybook build",
     "config:local": "cross-env NODE_ENV=development WEBPACK_SERVER_PORT_COMPONENTS=3003",
     "develop": "npm run config:local concurrently --raw \"npm:lint --silent\" \"webpack-dev-server --open --config ./webpack.config.js --mode=development --port 3003\" \"npm:watch --silent\"",
     "lint": "concurrently --raw \"npm:lint:js --silent\" \"npm:lint:scss --silent\"",
@@ -71,13 +81,13 @@
     "pre-commit": "cross-env FORCE_COLOR=true lint-staged",
     "prettier": "prettier --write \"src/**/*.scss\"",
     "start": "npm run develop",
+    "storybook": "storybook dev -p 6006",
     "update": "npm update --save/--save-dev",
     "watch": "concurrently --raw \"npm:watch:js --silent\" \"npm:watch:scss --silent\"",
     "watch:js": "onchange --delay 500 \"src/**/*.(ts|tsx)\" -- npm run lint:js --silent",
     "watch:prettier": "onchange --delay 500 \"src/**/*.scss\" -- npm run lint:scss --silent",
     "watch:scss": "onchange --delay 500 \"src/**/*.scss\" -- npm run lint:scss --silent"
   },
-  "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "version": "1.0.0"
 }
