--- a/packages/reflecta-backend/.eslintrc
+++ b/packages/reflecta-backend/.eslintrc
@@ -1,36 +1,20 @@
 {
     "env": {
-        "browser": true,
         "es2021": true,
         "node": true
     },
     "extends": [
-        "airbnb",
-        "airbnb-typescript",
         "../../.eslintrc.js"
     ],
-    "overrides": [
-            {
-                "files": [
-                    "./*.js"
-                ],
-                "rules": {
-                    "import/no-extraneous-dependencies": [
-                        0
-                    ]
-                }
-            }
-        ],
     "parserOptions": {
         "project": "./tsconfig.json"
     },
-    "root": true,
     "rules": {
         "import/order": [
             "error",
             {
                 "alphabetize": {
-                    "caseInsensitive": false,
+                    "caseInsensitive": true,
                     "order": "asc"
                 },
                 "groups": [
@@ -42,122 +26,82 @@
                 "pathGroups": [
                     {
                         "group": "parent",
-                        "pattern": "./views/*",
+                        "pattern": "./*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../views/*",
+                        "pattern": "./controllers/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../views/*",
+                        "pattern": "../controllers/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "./modules/*",
+                        "pattern": "../../controllers/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../modules/*",
+                        "pattern": "../../../controllers/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../modules/*",
+                        "pattern": "../../../../controllers/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../../modules/*",
+                        "pattern": "./models/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "./components/*",
+                        "pattern": "../models/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../components/*",
+                        "pattern": "../../models/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../components/*",
+                        "pattern": "../../../models/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../../components/*",
+                        "pattern": "../../../../models/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "./HOCs/*",
+                        "pattern": "./services/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../HOCs/*",
+                        "pattern": "../services/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../HOCs/*",
+                        "pattern": "../../services/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../../HOCs/*",
+                        "pattern": "../../../services/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "./config",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../**/config",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../components/**/config",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../components/**/config",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./state/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../state/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../state/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../state/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./services",
+                        "pattern": "../../../../services/*",
                         "position": "after"
                     },
                     {
@@ -182,22 +126,57 @@
                     },
                     {
                         "group": "parent",
-                        "pattern": "./routes",
+                        "pattern": "../../../../utils/*",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../routes",
+                        "pattern": "./middleware",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../routes",
+                        "pattern": "./Auth",
                         "position": "after"
                     },
                     {
                         "group": "parent",
-                        "pattern": "../../../routes",
+                        "pattern": "../Auth",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../../Auth",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../../../Auth",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "./RateLimiter",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../RateLimiter",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../../RateLimiter",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "../../../RateLimiter",
+                        "position": "after"
+                    },
+                    {
+                        "group": "parent",
+                        "pattern": "./routes/*",
                         "position": "after"
                     },
                     {
@@ -222,106 +201,11 @@
                     },
                     {
                         "group": "parent",
-                        "pattern": "./assets/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../assets/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../assets/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../assets/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "./assets/icons/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../assets/icons/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../assets/icons/*",
-                        "position": "after"
-                    },
-                    {
-                        "group": "parent",
-                        "pattern": "../../../assets/icons/*",
+                        "pattern": "../../../../constants",
                         "position": "after"
                     }
                 ]
             }
-        ],
-        "react/function-component-definition": [
-            "error",
-            {
-                "namedComponents": "arrow-function",
-                "unnamedComponents": "arrow-function"
-            }
-        ],
-        "react/jsx-curly-brace-presence": [
-            "error",
-            {
-                "children": "ignore",
-                "props": "always"
-            }
-        ],
-        "react/jsx-filename-extension": [
-            "error",
-            {
-                "extensions": [
-                    ".ts",
-                    ".tsx"
-                ]
-            }
-        ],
-        "react/jsx-indent": [
-            "error",
-            4
-        ],
-        "react/jsx-indent-props": [
-            "error",
-            4
-        ],
-        "react/jsx-max-props-per-line": [
-            "error",
-            {
-                "maximum": 1
-            }
-        ],
-        "react/jsx-one-expression-per-line": [
-            0
-        ],
-        "react/jsx-props-no-spreading": [
-            0
-        ],
-        "react/jsx-sort-props": [
-            "error",
-            {
-                "ignoreCase": true
-            }
-        ],
-        "react/jsx-uses-react": "off",
-        "react/no-did-update-set-state": [
-            0
-        ],
-        "react/no-unescaped-entities": [
-            0
-        ],
-        "react/prop-types": [
-            0
-        ],
-        "react/react-in-jsx-scope": "off"
+        ]
     }
 }
