--- a/packages/reflecta-backend/package.json
+++ b/packages/reflecta-backend/package.json
@@ -9,7 +9,9 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.2.4"
+    "mysql2": "^3.2.4",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "description": "Journaling application backend meant to help offer analysis and insights into journal entries.",
   "devDependencies": {
