--- a/packages/reflecta-backend/tsconfig.json
+++ b/packages/reflecta-backend/tsconfig.json
@@ -3,7 +3,8 @@
         "esModuleInterop": true,
         "module": "ESNext",
         "moduleResolution": "Node",
-        "noUnusedParameters": false
+        "noUnusedParameters": false,
+        "outDir": "./dist"
     },
     "exclude": [
         "./dist/**/*"
