--- a/.github/workflows/reflecta-backend-deploy.yml
+++ b/.github/workflows/reflecta-backend-deploy.yml
@@ -50,17 +50,13 @@ jobs:
       - name: Build
         run: npm run build -w reflecta-backend
 
-      # Copy Packages Config
-      - name: Copy Packages Config
-        run: |
-          cp ./package.json ./packages/reflecta-backend/dist/
-          cp ./package-lock.json ./packages/reflecta-backend/dist/
-
       # Install Production Packages
       - name: Install Production Packages
-        run: |
-          cd ./packages/reflecta-backend/dist/
-          npm ci --only-production
+        run: npm ci --only-production -w reflecta-backend
+
+      # Copy Packages
+      - name: Copy Packages Config
+        run: cp -r ./node_modules/ ./packages/reflecta-backend/dist/
 
       # Upload Artifacts
       - name: Upload Artifacts
