--- a/.github/workflows/reflecta-backend-deploy.yml
+++ b/.github/workflows/reflecta-backend-deploy.yml
@@ -52,7 +52,7 @@ jobs:
 
       # Install Production Packages
       - name: Install Production Packages
-        run: npm ci --only-production -w reflecta-backend
+        run: npm ci --only-production --ignore-scripts -w reflecta-backend
 
       # Copy Packages
       - name: Copy Packages Config
