--- a/packages/reflecta-backend/tsconfig.json
+++ b/packages/reflecta-backend/tsconfig.json
@@ -13,7 +13,8 @@
     "include": [
         "src/**/*",
         "src/*",
-        "./*.js"
+        "./*.js",
+        "static/*"
     ],
     "ts-node": {
         "esm": true,
